lets hope this works

--- a/Source/Frontend/digitr/src/index.html
+++ b/Source/Frontend/digitr/src/index.html
@@ -29,7 +29,7 @@
     }
   </script>-->
 
-  <script src="https://apis.google.com/js/platform.js" defer async></script>
+  <script src="https://apis.google.com/js/platform.js?onLoad=onLoadCallback"></script>
 
   <link href="build/main.css" rel="stylesheet">
 
