--- a/Source/Frontend/digitr/src/pages/home/home.html
+++ b/Source/Frontend/digitr/src/pages/home/home.html
@@ -3,5 +3,7 @@
 <ion-content>
   <img class="backgroundimage" src="assets/bg-old.png" />
   <h1 class="center">Sign In with Google to continue</h1>
-  <img class="signinbutton" (click)="signin()" src="assets/signinbutton.png"/>
+  
+  
+  <img id="signin" class="signinbutton" (click)="signin()" src="assets/signinbutton.png"/>
 </ion-content>
