--- a/Source/Frontend/digitr/src/pages/now-students/now-students.html
+++ b/Source/Frontend/digitr/src/pages/now-students/now-students.html
@@ -117,8 +117,8 @@
         </ion-item>
         
         <ion-item *ngFor="let destination of districtInfo.destinations">
-          <ion-label>{{ destination.value }}</ion-label>
-          <ion-radio value="{{ destination.value }}"></ion-radio>
+          <ion-label>{{ destination }}</ion-label>
+          <ion-radio value="{{ destination }}"></ion-radio>
         </ion-item>
       </ion-list>
       <ion-list>
