--- a/Source/Frontend/digitr/src/pages/start/start.html
+++ b/Source/Frontend/digitr/src/pages/start/start.html
@@ -17,7 +17,7 @@
   <img class="backgroundimage" src="assets/bg-old.png" />
   <div class="container">
     <h1 id="header">Welcome to Digitr!</h1>
-    <h4>If you need help, view the <a href="#">help guide</a> or contact us at <a href="tel://612-605-4449">+1 612-605-4449</a> and <a href="mailto:info@digitrapp.com">info@digitrapp.com</a></h4>
+    <h4>If you need help, contact us at <a href="tel://612-605-4449">+1 612-605-4449</a> and <a href="mailto:info@digitrapp.com">info@digitrapp.com</a></h4>
     <br>
     <h3>Are you a <button ion-button small (click)="student()">student</button> or a <button (click)="teacher()" small ion-button>teacher/administrator</button>?</h3>
     <br>
