--- a/Source/Frontend/digitr/src/pages/home/home.html
+++ b/Source/Frontend/digitr/src/pages/home/home.html
@@ -2,8 +2,9 @@
 
 <ion-content>
   <img class="backgroundimage" src="assets/bg-old.png" />
-  <h1 class="center">Sign In with Google to continue</h1>
+  <h1 class="center">Sign In to continue</h1>
   
   
   <img id="signin" class="signinbutton" (click)="signin()" src="assets/signinbutton.png"/>
+  <div class="signinbutton microsoft" *ngIf="!this.plt.is('cordova')" (click)="microsoftsignin()">Sign in with Microsoft</div>
 </ion-content>
