--- a/Source/Frontend/digitr/src/pages/anauser/anauser.html
+++ b/Source/Frontend/digitr/src/pages/anauser/anauser.html
@@ -31,6 +31,8 @@
       <ion-list-header>
         <span *ngIf="pass.name == 'Free'">Free Pass</span>
         <span *ngIf="pass.name != 'Free'">Pass {{ pass.name }}</span>
+
+        <ion-badge (click)="removePass(pass.timestamp)" *ngIf="isAdmin" item-end>Remove Pass</ion-badge>
       </ion-list-header>
       <ion-item>
         Destination
