--- a/Source/Frontend/digitr/src/pages/now-students/now-students.html
+++ b/Source/Frontend/digitr/src/pages/now-students/now-students.html
@@ -163,3 +163,13 @@
       </ion-list>
   </div>
 </ion-content>
+
+<div *ngIf="currentPage == 'messages'">
+  <ion-footer>
+    <ion-toolbar>
+      <ion-buttons start>
+        <button ion-button (click)="clearMessages()">Clear all messages</button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-footer>
+</div>
