--- a/Source/Frontend/digitr/src/pages/now-students/now-students.html
+++ b/Source/Frontend/digitr/src/pages/now-students/now-students.html
@@ -4,37 +4,65 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+<ion-menu type="overlay" [content]="content" id="teacher">
+
+    <ion-header>
+        <ion-toolbar color="primary">
+        <ion-title>Digitr v{{ local_version }}</ion-title>
+        </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+        <ion-list no-border>
+            <button ion-item menuClose="teacher" detail-none (click)="currentPage = 'now'">
+                <ion-icon item-start name="stats"></ion-icon>
+                Now
+            </button>
+            <button ion-item menuClose="teacher" detail-none (click)="currentPage = 'usepass'">
+                <ion-icon item-start name="compass"></ion-icon>
+                Use Pass
+            </button>
+            <button ion-item menuClose="teacher" detail-none (click)="currentPage = 'history'">
+                <ion-icon item-start name="time"></ion-icon>
+                History
+            </button>
+            <button ion-item menuClose="teacher" detail-none (click)="currentPage = 'messages'">
+                <ion-icon item-start name="send"></ion-icon>
+                Messages
+            </button>
+            <a target="_new" href="https://mpassapp.com">
+              <button ion-item menuClose="teacher" detail-none>
+                <ion-icon item-start name="help-circle"></ion-icon>
+                Help
+              </button>
+            </a>
+            <a target="_new" href="mailto:info@mpassapp.com">
+              <button ion-item menuClose="teacher" detail-none>
+                <ion-icon item-start name="mail"></ion-icon>
+                Send Feedback
+              </button>
+            </a>
+            <button ion-item detail-none (click)="this.a.signout()">
+                <ion-icon item-start name="log-out"></ion-icon>
+                Sign Out
+            </button>
+        </ion-list>
+    </ion-content>
+
+</ion-menu>
+
+<ion-nav #content [root]="rootPage"></ion-nav>
+
 <ion-header>
-  <ion-toolbar>
-      <ion-buttons start>
-          <button ion-button (click)="signout()">
-            Sign Out
+    <ion-toolbar color="primary">
+        <ion-title>Digitr | {{ getCurrentPage() }}</ion-title>
+        <ion-buttons start>
+          <button ion-button icon-only (click)="openMenu()" id="menu">
+            <ion-icon name="menu" ></ion-icon>
           </button>
         </ion-buttons>
-      <ion-segment [(ngModel)]="currentPage">
-        <ion-segment-button value="now">
-          Now
-        </ion-segment-button>
-        <ion-segment-button value="usepass">
-          Use Pass
-        </ion-segment-button>
-        <ion-segment-button value="history">
-          History
-        </ion-segment-button>
-        <ion-segment-button value="messages">
-          Messages
-        </ion-segment-button>
-      </ion-segment>
-      <ion-buttons end>
-        <a target="_new" href="https://mpassapp.com">
-          <button ion-button icon-only>
-            <ion-icon name="help-circle"></ion-icon>
-          </button>
-        </a>
-      </ion-buttons>
-  </ion-toolbar>
-
-</ion-header>
+    </ion-toolbar>
+  </ion-header>
 
 
 <ion-content>
