--- a/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
+++ b/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
@@ -4,31 +4,63 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+<ion-menu type="overlay" [content]="content" id="teacher">
+  
+    <ion-header>
+        <ion-toolbar color="primary">
+        <ion-title>Digitr v{{ local_version }}</ion-title> 
+        </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+        <ion-list no-border>
+            <button ion-item menuClose="teacher" *ngIf="currentPage == messages" detail-none (click)="currentPage = 'messages'" color="primary">
+                <ion-icon color="primary" item-start name="send"></ion-icon>
+                Messages
+            </button>
+            <button ion-item menuClose="teacher" *ngIf="currentPage != messages" detail-none (click)="currentPage = 'messages'" >
+                <ion-icon item-start name="send"></ion-icon>
+                Messages
+            </button>
+            <button ion-item menuClose="teacher" detail-none (click)="currentPage = 'analytics'">
+                <ion-icon item-start name="analytics"></ion-icon>
+                Analytics
+            </button>
+            <button *ngIf="isAdmin" ion-item menuClose="teacher" detail-none (click)="currentPage = 'admin'">
+                <ion-icon item-start name="people"></ion-icon>
+                Admin
+            </button>
+            <a target="_new" href="https://mpassapp.com">
+              <button ion-item menuClose="teacher" detail-none>
+                <ion-icon item-start name="help-circle"></ion-icon>
+                Help
+              </button>
+            </a>
+            <a target="_new" href="mailto:info@mpassapp.com">
+              <button ion-item menuClose="teacher" detail-none>
+                <ion-icon item-start name="mail"></ion-icon>
+                Send Feedback
+              </button>
+            </a>
+            <button ion-item detail-none (click)="this.a.signout()">
+                <ion-icon item-start name="log-out"></ion-icon>
+                Sign Out
+            </button>
+        </ion-list>
+    </ion-content>
+
+</ion-menu>
+
+<ion-nav #content [root]="rootPage"></ion-nav>
+
 <ion-header>
-  <ion-toolbar>
-      <ion-buttons start>
-          <button ion-button (click)="signout()">
-            Sign Out
-          </button>
-        </ion-buttons>
-    <ion-segment [(ngModel)]="currentPage">
-      <ion-segment-button value="messages">
-        Messages
-      </ion-segment-button>
-      <ion-segment-button value="analytics">
-        Analytics
-      </ion-segment-button>
-      <ion-segment-button [hidden]="!isAdmin" value="admin">
-        Admin
-      </ion-segment-button>
-    </ion-segment>
-    <ion-buttons end>
-      <a target="_new" href="https://mpassapp.com">
-        <button ion-button icon-only>
-          <ion-icon name="help-circle"></ion-icon>
+  <ion-toolbar color="primary">
+      <ion-title>Digitr | {{ getCurrentPage() }}</ion-title>
+      <ion-buttons start> 
+        <button ion-button icon-only (click)="openMenu()" id="menu">
+          <ion-icon name="menu" ></ion-icon>
         </button>
-      </a>
-    </ion-buttons>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
