Add ios version message

--- a/Source/Frontend/digitr/src/pages/whatsnew/whatsnew.html
+++ b/Source/Frontend/digitr/src/pages/whatsnew/whatsnew.html
@@ -22,5 +22,6 @@
   <h5>On the top, left-hand side, there is a menu button which looks like this: </h5>
   <h1>&emsp;<img src="../assets/mgmenu.png" menuToggle>&emsp; (Click to preview)</h1>
   <h5>Here, you will see a menu bar with all the panels in Digitr. Click on it to preview the menu.</h5>
+  <h5>Also, the iOS app version of Digitr is in the <a target="_new" href="https://itunes.apple.com/us/app/digitr/id1434334094?ls=1&mt=8">App Store</a>.</h5>
   <button ion-button full (click)="close()">Try now</button>
 </ion-content>
