--- a/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
+++ b/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
@@ -154,7 +154,7 @@
                   </ion-card-content>
                 </ion-card>
               </div>
-              <div col-md-6 col-12>
+              <!-- <div col-md-6 col-12>
                 <ion-card color="light">
                   <ion-card-header>
                     Most Valuable Player (student who used the most passes)
@@ -163,7 +163,7 @@
                       <h1>{{ stats.mvp }}</h1>
                   </ion-card-content>
                 </ion-card>
-              </div>
+              </div> -->
               <div col-md-6 col-12>
                 <ion-card color="dark">
                   <ion-card-header>
@@ -187,7 +187,7 @@
                   </ion-card-content>
                 </ion-card>
               </div>
-              <div col-md-6 col-12 *ngIf="viewAsAdmin">
+              <!-- <div col-md-6 col-12 *ngIf="viewAsAdmin">
                 <ion-card color="light">
                   <ion-card-header>
                     Most Valuable Teacher (teacher who approved the most passes)
@@ -196,7 +196,7 @@
                       <h1>{{ stats.mvt }}</h1>
                   </ion-card-content>
                 </ion-card>
-              </div>
+              </div> -->
             </ion-row>
           </ion-grid>
         </div>
