--- a/Source/Frontend/digitr/src/pages/whatsnew/whatsnew.html
+++ b/Source/Frontend/digitr/src/pages/whatsnew/whatsnew.html
@@ -17,11 +17,12 @@
 
 
 <ion-content padding>
-  <h1>We have an all new design!</h1>
-  <p>Aside from the new sign in screen and the blue toolbar, there is a new way to navigate Digitr!</p>
-  <h5>On the top, left-hand side, there is a menu button which looks like this: </h5>
-  <h1>&emsp;<img src="../assets/mgmenu.png" menuToggle>&emsp; (Click to preview)</h1>
-  <h5>Here, you will see a menu bar with all the panels in Digitr. Click on it to preview the menu.</h5>
+  <h1>Stability Improvements</h1>
+  <ul>
+    <li>Improved data accuracy in the Analytics panel</li>
+    <li>Added a manual send back button to the Analytics panel</li>
+    <li>Students are automatically sent back after a pass has been inactive for more than 1 day (logged as 1 hour)</li>
+  </ul>
   <h5>Also, the iOS app version of Digitr is in the <a target="_new" href="https://itunes.apple.com/us/app/digitr/id1434334094?ls=1&mt=8">App Store</a>.</h5>
   <button ion-button full (click)="close()">Try now</button>
 </ion-content>
