--- a/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
+++ b/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
@@ -99,6 +99,9 @@
     </ion-list>
   </div>
   <div *ngIf="currentPage == 'analytics'">
+      <ion-refresher slot="fixed" (ionRefresh)="getAnalytics($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
       <h1 class="nohistory" *ngIf="!analytics">Analytics is not enabled. <br> Please refer to your administrator.</h1>
       <div *ngIf="analytics">
         <div *ngIf="analyticsPage == 'stats'">
