--- a/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
+++ b/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
@@ -157,16 +157,19 @@
                   </ion-card-content>
                 </ion-card>
               </div>
-              <!-- <div col-md-6 col-12>
-                <ion-card color="light">
+              <div col-md-6 col-12>
+                <ion-card color="light" (click)="mvptoggle()">
                   <ion-card-header>
-                    Most Valuable Player (student who used the most passes)
+                    Student who used the most passes
                   </ion-card-header>
-                  <ion-card-content>
+                  <ion-card-header>
+                      <b>Expand</b>
+                  </ion-card-header>
+                  <ion-card-content *ngIf="mvpenabled">
                       <h1>{{ stats.mvp }}</h1>
                   </ion-card-content>
                 </ion-card>
-              </div> -->
+              </div>
               <div col-md-6 col-12>
                 <ion-card color="dark">
                   <ion-card-header>
